# N2ChessPuzzleMPI

./: CMakeLists.txt  Chessboard.hpp  Handler.cpp  Main-serial.cpp  Main.cpp  Makefile  Master.cpp  Master.hpp  NQueenSolver.cpp  NQueenSolver.hpp  README.md  Worker.cpp  Worker.hpp  compile.sh  hpcJobSub  run.sh
000-serial/: Chessboard.cpp  Handler.cpp  Handler.hpp  Main-serial.cpp  Main.cpp  NQueenSolver.cpp  NQueenSolver.hpp  SparseNQueenSolver.cpp  SparseNQueenSolver.hpp
001-mpi/: Chessboard.cpp  Chessboard.hpp  Handler.cpp  Handler.hpp  Main.cpp  Master.cpp  Master.hpp  NQueenSolver.cpp  NQueenSolver.hpp  SparseNQueenSolver.cpp  SparseNQueenSolver.hpp  Worker.cpp  Worker.hpp
001-sendRecv/: Master.cpp  Master.hpp  NQueenSolver.cpp  NQueenSolver.hpp  Worker.cpp
002-DLXversion/: Makefile  run.sh
002-DLXversion/000-serial/: DLXNQueenSolver.hpp  DLXNQueenSolver.hpp~  Handler.cpp  Handler.hpp  Main-serial.cpp
002-DLXversion/001-mpi/: DLXNQueenSolver.cpp  DLXNQueenSolver.hpp  Handler.cpp  Handler.hpp  Main.cpp
002-mpmpi/: Handler.cpp  Handler.hpp  Main.cpp  NQueenSolver.cpp  NQueenSolver.hpp
002-ompmpi/: Handler.hpp  Main.cpp  MemoryAllocationTool.cpp  NQueenSolver.hpp
002-scatterGatherBCast/: Main.cpp  Worker.hpp
003-fastmpi/: Chessboard.cpp  Handler.cpp  Handler.hpp  Main.cpp  SparseNQueenSolver.cpp  SparseNQueenSolver.hpp
003-mpi2/: Chessboard.hpp  Handler.cpp  Handler.hpp  Main.cpp  MemoryAllocationTool.cpp
004-ompmpi2/: Chessboard.hpp  Handler.cpp  Handler.hpp  Main.cpp
005-mpiio/: Handler.cpp  Handler.hpp  Main.cpp  MemoryAllocationTool.hpp
(+10 files in other folders)
